@@ -1,3 +1,11 @@
+Direct3D 9
+	* Changed Include.Open to include missing parentStream parameter.
+	* Fixed Mesh.ToXFile() to handle meshes that don't have materials and effects.
+	
+Direct3D 10
+	* Changed Include.Open to include missing parentStream parameter.
+	* Changed Font.Draw color parameter to Color4 instead of unsigned int.
+
 Direct3D 11
 	* Added the UnorderedAccess member to BindFlags.
 	* Added the ability to create structured buffer resources.
